
version 0.2.1 - 21-Jul-2008
 . Director: landscape can be RIGHT or LEFT (at compile time)
 . Director: proxies touchesCancelled
 . Particle System: added smoke particle.
 . Particle System: fire example improved.
 . Particle System: supports for additive and blend colors
 . Particle System: splited in 2 files: particle.[hm] and ParticleSystems.[hm]
 . Particle System: doesn't iterate over dead particles
 . Particle System: fire.png uses white color, so "blend" mode works ok. fire.png is smaller (less resources)
 
version 0.2 - 5-Jul-2008
 . Replaced CGPoint with chipmunk's vector (cpVect) in CocosNode
 . Added particle system.
    . uses VBO + POINT_SPRITES
    . Built-in systems: Fire, Fireworks, Sun, Galaxy, Flower, Meteor, Spiral, Explosion
	. supports: system duration, paticle duration, gravity, radial, tangential, color, size, texture, direction, spread (all of them with its variation)
 . added support to display FPS
 
version 0.1 - 25-jun-2008:

25-jun-2008:
 . renamed MoveBy:actionWithDuration:delta to MoveBy:actionWithDuration:position
 . added Animation, Animate classes to animates sprites
 . removed box2d and related stuff to box2d
 . added and ported Chipmunk Demo
 . added primitives like drawCircle(), drawPoly(), drawLine(), drawPoint()

24-jun-2008:
 . moved all main.c and other tests files to tests/
 . moved plists, sounds and images to Resources/
 . removed unused images
 . Using only one plist file in Resources
 . cocos2d-port renamed to trunk
 . Imported code from Assembla