@@ -118,7 +118,7 @@ id nextTransition()
 - (void) applicationDidFinishLaunching:(UIApplication*)application
 {
 	// before creating any layer, set the landscape mode
-//	[[Director sharedDirector] setLandscape: YES];
+	[[Director sharedDirector] setLandscape: YES];
 
 	Scene *scene = [Scene node];
 	[scene add: [TextLayer node]];
